Fixed a problem where error tooltips were covered in the last row of a form.

--- a/src-gwt/org/opencms/gwt/client/ui/css/input.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/input.css
@@ -277,6 +277,10 @@ div.error, .error {
     z-index: value("constants.css.zIndexInline");
 }
 
+.formRow:last-child div.error, .formRow:last-child .error { 
+   position: relative;
+}
+
 .selectBoxRoot.selectBoxDisabled .selectBoxSelected{
 	background-color: value("constants.css.backgroundColorStateDisabled");
 	color: value("constants.css.textColorDisabled");
